fix logo size on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -678,9 +678,6 @@ footer {
   #lead-content img {
     max-width:50%;
   }
-  #lead-content h1 {
-    padding-top:5%;
-  }
   #about {
     text-align: center
   }
@@ -719,7 +716,7 @@ footer {
     height:100vh;
   }
   #lead-content h1 {
-    padding-top:40%;
+    padding-top:5%;
     font-size: 5em;
   }
   #lead-content h2 {
